# videofast-challenge

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  benchmark.json
submission/Source/Lib/: CMakeLists.txt  config.cmake.in  pkg-config.pc.in
submission/Source/Lib/ASM_ARM_CRC32/: CMakeLists.txt  hash_arm_crc32.c
submission/Source/Lib/ASM_AVX2/: CMakeLists.txt  aom_subpixel_8t_intrin_avx2.c  av1_inv_txfm_avx2.c  av1_inv_txfm_avx2.h  av1_quantize_avx2.c  blend_a64_mask_avx2.c  cdef_avx2.c  cdef_block_avx2.c  cfl_avx2.c  comb_avg_sad_intrin_avx2.c  compute_sad_avx2.h  compute_sad_intrin_avx2.c  convolve_2d_avx2.c  convolve_avx2.c  convolve_avx2.h  corner_match_avx2.c  encodetxb_avx2.c  fft_avx2.c  highbd_convolve_2d_avx2.c  highbd_convolve_avx2.c  highbd_fwd_txfm_avx2.c  highbd_hadamard_avx2.c  highbd_intra_pred_avx2.c  highbd_inv_txfm_avx2.c  highbd_jnt_convolve_avx2.c  highbd_quantize_intrin_avx2.c  highbd_variance_avx2.c  highbd_warp_affine_avx2.c  inter_prediction_com_avx2.c  intra_pred_intrin_avx2.c  itx_hbd.h  itx_lbd.h  jnt_convolve_2d_avx2.c  jnt_convolve_avx2.c  mc.h  mc16_avx2.asm  memory_avx2.h  noise_model_avx2.c  obmc_sad_avx2.c  obmc_variance_avx2.c  (+19 more)
submission/Source/Lib/ASM_AVX512/: CMakeLists.txt  cdef_avx512.c  cdef_block_avx512.c  compute_sad_intrin_avx512.c  convolve_2d_avx512.c  convolve_avx512.c  convolve_avx512.h  encodetxb_avx512.c  highbd_fwd_txfm_AVX512.c  highbd_intra_pred_avx512.c  highbd_inv_txfm_avx512.c  jnt_convolve_2d_avx512.c  jnt_convolve_avx512.c  pic_operators_intrin_avx512.c  pickrst_avx512.c  synonyms_avx512.h  transpose_avx512.h  transpose_encoder_avx512.h  variance_avx512.c  wiener_convolve_avx512.c
submission/Source/Lib/ASM_NEON/: CMakeLists.txt  aom_convolve8_neon.c  aom_convolve8_neon.h  aom_sum_squares_neon.c  av1_inv_txfm_neon.c  av1_inv_txfm_neon.h  av1_k_means_neon.c  av1_quantize_neon.c  blend_a64_mask_neon.c  blend_a64_mask_neon.h  block_error_neon.c  cdef_block_neon.c  cdef_filter_block_neon.c  cdef_neon.c  cfl_neon.c  compound_convolve_neon.c  compound_convolve_neon.h  compute_sad_neon.c  compute_sad_neon.h  convolve_neon.c  convolve_neon.h  convolve_scale_neon.c  convolve_scale_neon.h  corner_match_neon.c  deblocking_filter_intrinsic_neon.c  encodetxb_neon.c  hadamard_path_neon.c  highbd_blend_a64_mask_neon.c  highbd_convolve_neon.c  highbd_convolve_scale_neon.c  highbd_convolve_scale_neon.h  highbd_fwd_txfm_neon.c  highbd_hadamard_neon.c  highbd_inter_prediction_neon.c  highbd_intra_prediction_neon.c  highbd_inv_txfm_neon.c  highbd_jnt_convolve_neon.c  highbd_jnt_convolve_neon.h  highbd_loopfilter_neon.c  highbd_pickrst_neon.c  (+40 more)
submission/Source/Lib/ASM_NEON_DOTPROD/: CMakeLists.txt  aom_convolve8_neon_dotprod.c  cdef_neon_dotprod.c  compute_sad_neon_dotprod.c  compute_sad_neon_dotprod.h  convolve_neon_dotprod.c  convolve_neon_dotprod.h  convolve_scale_neon_dotprod.c  convolve_scale_neon_dotprod.h  corner_match_neon_dotprod.c  jnt_convolve_neon_dotprod.c  pic_analysis_neon_dotprod.c  sad_neon_dotprod.c  sad_neon_dotprod.h  sse_neon_dotprod.c  ssim_neon_dotprod.c  temporal_filtering_neon_dotprod.c  temporal_filtering_neon_dotprod.h  variance_neon_dotprod.c
submission/Source/Lib/ASM_NEON_I8MM/: CMakeLists.txt  aom_convolve8_neon_i8mm.c  convolve_neon_i8mm.c  convolve_neon_i8mm.h  convolve_scale_neon_i8mm.c  intra_prediction_neon_i8mm.c  jnt_convolve_neon_i8mm.c  temporal_filtering_neon_i8mm.c  warp_plane_neon_i8mm.c  warp_plane_neon_i8mm.h
submission/Source/Lib/ASM_SSE2/: CMakeLists.txt  av1_txfm_sse2.h  compute_mean_intrin_sse2.c  convolve_2d_sse2.c  convolve_sse2.c  dlf_intrin_sse2.c  dlf_sse2.h  encodetxb_sse2.c  fft_sse2.c  highbd_intrapred_sse2.c  highbd_intrapred_sse2.h  highbd_subtract_sse2.c  highbd_variance_sse2.c  intra_pred_av1_intrin_sse2.c  jnt_convolve_2d_sse2.c  jnt_convolve_sse2.c  lpf_common_sse2.h  mcp_sse2.h  me_sad_calc_intrin_sse2.c  pack_unpack_intrin_sse2.c  pic_operators_intrin_sse2.c  picture_operators_sse2.asm  synonyms.h  transpose_sse2.h  variance_sse2.c  variance_sse2.h  wiener_convolve_sse2.c  x86_abi_support.asm  x86inc.asm
submission/Source/Lib/ASM_SSE4_1/: CMakeLists.txt  av1_convolve_scale_sse4.c  av1_quantize_sse4_1.c  av1_txfm1d_sse4.h  av1_txfm_sse4.h  blend_a64_mask_sse4.c  blend_sse4.h  cdef_block_sse4_1.c  cdef_sse4.c  compute_sad_intrin_sse4_1.c  corner_match_sse4.c  encodetxb_sse4.c  filterintra_sse4.c  hash_sse4_2.c  highbd_convolve_2d_sse4.c  highbd_fwd_txfm_sse4.c  highbd_inv_txfm_sse4.c  highbd_jnt_convolve_sse4.c  highbd_txfm_utility_sse4.h  intrapred_16bit_intrin_sse4_1.c  memory_sse4_1.h  obmc_variance_sse4.c  pic_operators_intrin_sse4_1.c  pickrst_sse4.c  reconinter_sse4.c  selfguided_sse4.c  temporal_filtering_sse4_1.c  warp_plane_sse4.c
submission/Source/Lib/ASM_SSSE3/: aom_subpixel_8t_intrin_ssse3.c  av1_inv_txfm_ssse3.c  av1_inv_txfm_ssse3.h  highbd_convolve_2d_ssse3.c  highbd_convolve_ssse3.c  highbd_intrapred_intrin_ssse3.c  highbd_wiener_convolve_ssse3.c  intrapred_ssse3.c  jnt_convolve_ssse3.c  reconinter_ssse3.c  variance_impl_ssse3.c
submission/Source/Lib/ASM_SVE/: CMakeLists.txt  aom_sum_squares_sve.c  av1_quantize_sve.c  block_error_sve.c  cdef_sve.c  compute_sad_neoverse_v2.c  compute_sad_sve.c  compute_sad_sve.h  corner_match_sve.c  highbd_convolve_sve.c  highbd_convolve_sve.h  highbd_jnt_convolve_sve.c  highbd_jnt_convolve_sve.h  highbd_pickrst_sve.c  highbd_sse_sve.c  highbd_variance_sve.c  highbd_warp_plane_sve.c  neon_sve_bridge.h  pickrst_sve.c  pickrst_sve.h  sad_sve.c  temporal_filtering_sve.c  warp_plane_sve.c  wedge_utils_sve.c
submission/Source/Lib/ASM_SVE2/: CMakeLists.txt  highbd_convolve_sve2.c  highbd_convolve_sve2.h  highbd_jnt_convolve_sve2.c  neon_sve2_bridge.h  temporal_filtering_sve2.c
submission/Source/Lib/C_DEFAULT/: blend_a64_mask_c.c  cfl_c.c  compute_sad_c.c  compute_sad_c.h  encode_txb_ref_c.c  filterintra_c.c  inter_prediction_c.c  intra_prediction_c.c  pack_unpack_c.c  pack_unpack_c.h  picture_operators_c.c  picture_operators_c.h  sad_av1.c  variance.c
submission/Source/Lib/Codec/: CMakeLists.txt  ac_bias.c  cdef.c  (+235 more)
(+270 files in other folders)
